Fix Retirement trends wrapping

--- a/carbon/components/Layout/style.module.scss
+++ b/carbon/components/Layout/style.module.scss
@@ -30,6 +30,7 @@
     gap: 1.6rem;
     padding-bottom: 4rem;
     border-bottom: 0.1rem solid var(--text-color-03);
+    white-space: nowrap;
   }
 }
 
